package ext

import (
	"context"
	"encoding/json"
	"fmt"
	"io"

	"go.flipt.io/flipt/rpc/flipt"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"gopkg.in/yaml.v2"
)

type Creator interface {
	GetNamespace(ctx context.Context, r *flipt.GetNamespaceRequest) (*flipt.Namespace, error)
	CreateNamespace(ctx context.Context, r *flipt.CreateNamespaceRequest) (*flipt.Namespace, error)
	CreateFlag(ctx context.Context, r *flipt.CreateFlagRequest) (*flipt.Flag, error)
	CreateVariant(ctx context.Context, r *flipt.CreateVariantRequest) (*flipt.Variant, error)
	CreateSegment(ctx context.Context, r *flipt.CreateSegmentRequest) (*flipt.Segment, error)
	CreateConstraint(ctx context.Context, r *flipt.CreateConstraintRequest) (*flipt.Constraint, error)
	CreateRule(ctx context.Context, r *flipt.CreateRuleRequest) (*flipt.Rule, error)
	CreateDistribution(ctx context.Context, r *flipt.CreateDistributionRequest) (*flipt.Distribution, error)
}

type Importer struct {
	creator   Creator
	namespace string
	createNS  bool
}

type ImportOpt func(*Importer)

func WithNamespace(ns string) ImportOpt {
	return func(i *Importer) {
		i.namespace = ns
	}
}

func WithCreateNamespace() ImportOpt {
	return func(i *Importer) {
		i.createNS = true
	}
}

func NewImporter(store Creator, opts ...ImportOpt) *Importer {
	i := &Importer{
		creator: store,
	}

	for _, opt := range opts {
		opt(i)
	}

	return i
}

func (i *Importer) Import(ctx context.Context, r io.Reader) error {
	var (
		dec = yaml.NewDecoder(r)
		doc = new(Document)
	)

	if err := dec.Decode(doc); err != nil {
		return fmt.Errorf("unmarshalling document: %w", err)
	}

	if doc.Version != "" && doc.Version != "1.0" {
		return fmt.Errorf("unsupported version: %s", doc.Version)
	}

	// check if document namespace matches cli namespace if both are set
	if doc.Namespace != "" && i.namespace != "" && doc.Namespace != i.namespace {
		return fmt.Errorf("namespace mismatch: namespaces must match in file and args if both provided: %s != %s", doc.Namespace, i.namespace)
	}

	// prefer document namespace over cli namespace, but use cli namespace if
	// document namespace is empty
	var namespace = doc.Namespace
	if namespace == "" {
		namespace = i.namespace
	}

	if i.createNS && namespace != "" && namespace != flipt.DefaultNamespace {
		_, err := i.creator.GetNamespace(ctx, &flipt.GetNamespaceRequest{
			Key: namespace,
		})

		if status.Code(err) != codes.NotFound {
			return err
		}

		_, err = i.creator.CreateNamespace(ctx, &flipt.CreateNamespaceRequest{
			Key:  namespace,
			Name: namespace,
		})
		if err != nil {
			return err
		}
	}

	var (
		// map flagKey => *flag
		createdFlags = make(map[string]*flipt.Flag)
		// map segmentKey => *segment
		createdSegments = make(map[string]*flipt.Segment)
		// map flagKey:variantKey => *variant
		createdVariants = make(map[string]*flipt.Variant)
	)

	// create flags/variants
	for _, f := range doc.Flags {
		if f == nil {
			continue
		}

		flag, err := i.creator.CreateFlag(ctx, &flipt.CreateFlagRequest{
			Key:          f.Key,
			Name:         f.Name,
			Description:  f.Description,
			Enabled:      f.Enabled,
			NamespaceKey: namespace,
		})

		if err != nil {
			return fmt.Errorf("creating flag: %w", err)
		}

		for _, v := range f.Variants {
			if v == nil {
				continue
			}

			var out []byte

			if v.Attachment != nil {
				converted := convert(v.Attachment)
				out, err = json.Marshal(converted)
				if err != nil {
					return fmt.Errorf("marshalling attachment: %w", err)
				}
			}

			variant, err := i.creator.CreateVariant(ctx, &flipt.CreateVariantRequest{
				FlagKey:      f.Key,
				Key:          v.Key,
				Name:         v.Name,
				Description:  v.Description,
				Attachment:   string(out),
				NamespaceKey: namespace,
			})

			if err != nil {
				return fmt.Errorf("creating variant: %w", err)
			}

			createdVariants[fmt.Sprintf("%s:%s", flag.Key, variant.Key)] = variant
		}

		createdFlags[flag.Key] = flag
	}

	// create segments/constraints
	for _, s := range doc.Segments {
		if s == nil {
			continue
		}

		segment, err := i.creator.CreateSegment(ctx, &flipt.CreateSegmentRequest{
			Key:          s.Key,
			Name:         s.Name,
			Description:  s.Description,
			MatchType:    flipt.MatchType(flipt.MatchType_value[s.MatchType]),
			NamespaceKey: namespace,
		})

		if err != nil {
			return fmt.Errorf("creating segment: %w", err)
		}

		for _, c := range s.Constraints {
			if c == nil {
				continue
			}

			_, err := i.creator.CreateConstraint(ctx, &flipt.CreateConstraintRequest{
				SegmentKey:   s.Key,
				Type:         flipt.ComparisonType(flipt.ComparisonType_value[c.Type]),
				Property:     c.Property,
				Operator:     c.Operator,
				Value:        c.Value,
				NamespaceKey: namespace,
			})

			if err != nil {
				return fmt.Errorf("creating constraint: %w", err)
			}
		}

		createdSegments[segment.Key] = segment
	}

	// create rules/distributions
	for _, f := range doc.Flags {
		if f == nil {
			continue
		}

		// loop through rules
		for _, r := range f.Rules {
			if r == nil {
				continue
			}

			rule, err := i.creator.CreateRule(ctx, &flipt.CreateRuleRequest{
				FlagKey:      f.Key,
				SegmentKey:   r.SegmentKey,
				Rank:         int32(r.Rank),
				NamespaceKey: namespace,
			})

			if err != nil {
				return fmt.Errorf("creating rule: %w", err)
			}

			for _, d := range r.Distributions {
				if d == nil {
					continue
				}

				variant, found := createdVariants[fmt.Sprintf("%s:%s", f.Key, d.VariantKey)]
				if !found {
					return fmt.Errorf("finding variant: %s; flag: %s", d.VariantKey, f.Key)
				}

				_, err := i.creator.CreateDistribution(ctx, &flipt.CreateDistributionRequest{
					FlagKey:      f.Key,
					RuleId:       rule.Id,
					VariantId:    variant.Id,
					Rollout:      d.Rollout,
					NamespaceKey: namespace,
				})

				if err != nil {
					return fmt.Errorf("creating distribution: %w", err)
				}
			}
		}
	}

	return nil
}

// convert converts each encountered map[interface{}]interface{} to a map[string]interface{} value.
// This is necessary because the json library does not support map[interface{}]interface{} values which nested
// maps get unmarshalled into from the yaml library.
func convert(i interface{}) interface{} {
	switch x := i.(type) {
	case map[interface{}]interface{}:
		m := map[string]interface{}{}
		for k, v := range x {
			if sk, ok := k.(string); ok {
				m[sk] = convert(v)
			}
		}
		return m
	case []interface{}:
		for i, v := range x {
			x[i] = convert(v)
		}
	}
	return i
}
